<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swiper"
    style="@style/AppTheme.Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/favorites"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:listitem="@layout/row_track" />

  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true"
      app:layout_scrollFlags="scroll|exitUntilCollapsed">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        app:layout_collapseMode="parallax">

        <EditText
            android:id="@+id/filter_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_container"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/filters" />

        <LinearLayout
          android:id="@+id/title_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal">

          <TextView
            style="@style/AppTheme.Title"
            android:id="@+id/favorites_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            android:text="@string/favorites" />

          <ImageButton
            android:id="@+id/actions"
            style="@style/IconButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/alt_more_options"
            android:src="@drawable/more" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
          android:id="@+id/play"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="8dp"
          android:backgroundTint="@color/colorPrimary"
          android:paddingHorizontal="16dp"
          android:paddingVertical="8dp"
          android:text="@string/playback_shuffle"
          android:textColor="@android:color/white"
          app:icon="@drawable/play"
          app:iconTint="@android:color/white"
          app:rippleColor="@color/ripple" />

      </RelativeLayout>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>